--- a/app/src/main/res/layout/fragment_solo_setup.xml
+++ b/app/src/main/res/layout/fragment_solo_setup.xml
@@ -19,10 +19,6 @@
             android:layout_height="wrap_content"
             tools:context=".view.SoloSetupFragment">
 
-            <!--<Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>-->
-
             <TextView
                 android:id="@+id/profile_image_textview"
                 android:layout_width="wrap_content"
@@ -135,7 +131,7 @@
                 app:boxStrokeWidth="0dp"
                 app:boxStrokeWidthFocused="0dp"
                 android:background="@drawable/edit_text_background"
-                app:layout_constraintBottom_toTopOf="@id/price_text"
+                app:layout_constraintBottom_toTopOf="@id/city_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/genres_textInputLayout">
@@ -146,9 +142,34 @@
                     android:background="@drawable/edit_text_background"
                     android:layout_marginStart="20sp"
                     android:layout_marginEnd="20sp"
-                    android:hint="Contact Number"
+                    android:hint="@string/contact_number"
                     android:inputType="number"
                     android:text="@={soloSetupViewModel.contactNumber}" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/city_text"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20sp"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                android:background="@drawable/edit_text_background"
+                app:layout_constraintBottom_toTopOf="@id/price_text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/contact_text">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edit_text_background"
+                    android:layout_marginStart="20sp"
+                    android:layout_marginEnd="20sp"
+                    android:hint="@string/town_city"
+                    android:inputType="number"
+                    android:text="@={soloSetupViewModel.city}" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -160,7 +181,7 @@
                 app:boxStrokeWidthFocused="0dp"
                 android:background="@drawable/edit_text_background"
                 app:layout_constraintStart_toStartOf="@id/contact_text"
-                app:layout_constraintTop_toBottomOf="@id/contact_text">
+                app:layout_constraintTop_toBottomOf="@id/city_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -168,7 +189,7 @@
                     android:background="@drawable/edit_text_background"
                     android:layout_marginStart="20sp"
                     android:layout_marginEnd="20sp"
-                    android:hint="Price"
+                    android:hint="@string/price"
                     android:inputType="number"
                     android:text="@={soloSetupViewModel.price}" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -190,7 +211,7 @@
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/pill_button"
                 android:onClick="@{()-> soloSetupViewModel.onSaveClicked()}"
-                android:text="Save"
+                android:text="@string/save"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
