--- a/app/src/main/res/layout/fragment_venue_setup.xml
+++ b/app/src/main/res/layout/fragment_venue_setup.xml
@@ -70,11 +70,13 @@
                     android:id="@+id/venue_name_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="20sp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginEnd="40dp"
+                    android:layout_marginEnd="20sp"
                     android:background="@color/transparent"
-                    android:hint="Venue Name"
+                    android:hint="@string/venue_name"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/upload_image_button">
@@ -82,7 +84,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/transparent"
+                        android:background="@drawable/edit_text_background"
                         android:inputType="textCapSentences"
                         android:text="@={venueSetupViewModel.venueName}" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -131,7 +133,8 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="60dp"
-                    android:background="@color/transparent"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/divider">
@@ -139,8 +142,8 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/transparent"
-                        android:hint="Address Line one"
+                        android:background="@drawable/edit_text_background"
+                        android:hint="@string/address_line_one"
                         android:inputType="textCapSentences"
                         android:text="@={venueSetupViewModel.addressLineOne}" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -152,7 +155,8 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="60dp"
-                    android:background="@color/transparent"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/address_line_one">
@@ -160,7 +164,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/transparent"
+                        android:background="@drawable/edit_text_background"
                         android:hint="Address Line Two"
                         android:inputType="textCapSentences"
                         android:text="@={venueSetupViewModel.addressLineTwo}" />
@@ -173,15 +177,16 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
-                    android:background="@color/transparent"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/address_line_two">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/transparent"
-                        android:hint="City/Town"
+                        android:background="@drawable/edit_text_background"
+                        android:hint="@string/town_city"
                         android:inputType="textCapSentences"
                         android:text="@={venueSetupViewModel.city}" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -191,17 +196,18 @@
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:background="@color/transparent"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/city">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:background="@color/transparent"
-                        android:hint="County"
+                        android:background="@drawable/edit_text_background"
+                        android:hint="@string/county"
                         android:inputType="textCapSentences"
                         android:text="@={venueSetupViewModel.county}" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -213,15 +219,16 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
-                    android:background="@color/transparent"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/county">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/transparent"
-                        android:hint="Country"
+                        android:background="@drawable/edit_text_background"
+                        android:hint="@string/country"
                         android:inputType="textCapSentences"
                         android:text="@={venueSetupViewModel.country}" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -243,15 +250,16 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:background="@color/transparent"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
                     app:layout_constraintStart_toStartOf="@id/divider2"
                     app:layout_constraintTop_toBottomOf="@+id/divider2">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/transparent"
-                        android:hint="*Max Capacity"
+                        android:background="@drawable/edit_text_background"
+                        android:hint="@string/max_capacity"
                         android:inputType="number"
                         android:text="@={venueSetupViewModel.maxCapacity}" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -263,15 +271,16 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="60dp"
-                    android:background="@color/transparent"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
                     app:layout_constraintStart_toStartOf="@id/divider2"
                     app:layout_constraintTop_toBottomOf="@+id/capacity_text">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/transparent"
-                        android:hint="Contact Number"
+                        android:background="@drawable/edit_text_background"
+                        android:hint="@string/contact_number"
                         android:inputType="number"
                         android:text="@={venueSetupViewModel.contactNumber}" />
                 </com.google.android.material.textfield.TextInputLayout>
