--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -17,6 +17,14 @@
         <variable
         name="venueModel"
         type="com.example.rockaroundapp.model.Venue" />
+
+        <variable
+            name="reviewOne"
+            type="com.example.rockaroundapp.model.Review" />
+
+        <variable
+            name="reviewTwo"
+            type="com.example.rockaroundapp.model.Review" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -546,7 +554,7 @@
                             android:id="@+id/reviewer_profile_img"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
-                            android:src="@drawable/ic_baseline_account_circle_24"
+                            android:imageURL="@{reviewOne.reviewerImg}"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
@@ -556,7 +564,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
-                            android:text="John Doe"
+                            android:text="@{reviewOne.reviewerStageName}"
                             android:textSize="12sp"
                             app:layout_constraintStart_toEndOf="@id/reviewer_profile_img"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -565,17 +573,18 @@
                             android:id="@+id/review_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="10/12/22"
+                            android:text="@{reviewOne.date}"
                             android:textSize="9sp"
                             app:layout_constraintStart_toStartOf="@id/reviewer_name"
-                            app:layout_constraintTop_toBottomOf="@id/reviewer_name" />
+                            app:layout_constraintTop_toBottomOf="@id/reviewer_name"
+                            tools:ignore="SmallSp" />
 
                         <TextView
                             android:id="@+id/review_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:text="This is the title"
+                            android:text="@{reviewOne.title}"
                             android:textSize="12sp"
                             app:layout_constraintStart_toStartOf="@id/review_date"
                             app:layout_constraintTop_toBottomOf="@id/review_date" />
@@ -586,10 +595,11 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="3dp"
                             android:layout_marginEnd="108dp"
-                            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pulvinar at mauris a vestibulum. Integer molestie erat et libero sodales elementum."
+                            android:text="@{reviewOne.description}"
                             android:textSize="10sp"
                             app:layout_constraintStart_toStartOf="@id/review_title"
-                            app:layout_constraintTop_toBottomOf="@id/review_title" />
+                            app:layout_constraintTop_toBottomOf="@id/review_title"
+                            tools:ignore="SmallSp" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </com.google.android.material.card.MaterialCardView>
 
@@ -601,6 +611,19 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/review_card" />
+
+                <TextView
+                    android:id="@+id/no_reviews"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_reviews_too_see_here"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="@id/reviews_section"
+                    app:layout_constraintEnd_toEndOf="@id/reviews_section"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/reviews_section"
+                    app:layout_constraintVertical_bias="0.281"
+                    tools:layout_editor_absoluteX="0dp" />
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/review_card_2"
@@ -619,7 +642,7 @@
                             android:id="@+id/reviewer_profile_img_2"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
-                            android:src="@drawable/ic_baseline_account_circle_24"
+                            android:imageURL="@{reviewTwo.reviewerImg}"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
@@ -629,7 +652,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
-                            android:text="John Doe"
+                            android:text="@{reviewTwo.reviewerStageName}"
                             android:textSize="12sp"
                             app:layout_constraintStart_toEndOf="@id/reviewer_profile_img_2"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -638,17 +661,18 @@
                             android:id="@+id/review_date_2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="10/12/22"
+                            android:text="@{reviewTwo.date}"
                             android:textSize="9sp"
                             app:layout_constraintStart_toStartOf="@id/reviewer_name_2"
-                            app:layout_constraintTop_toBottomOf="@id/reviewer_name_2" />
+                            app:layout_constraintTop_toBottomOf="@id/reviewer_name_2"
+                            tools:ignore="SmallSp" />
 
                         <TextView
                             android:id="@+id/review_title_2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:text="This is the title"
+                            android:text="@{reviewTwo.title}"
                             android:textSize="12sp"
                             app:layout_constraintStart_toStartOf="@id/review_date_2"
                             app:layout_constraintTop_toBottomOf="@id/review_date_2" />
@@ -659,10 +683,11 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="3dp"
                             android:layout_marginEnd="108dp"
-                            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pulvinar at mauris a vestibulum. Integer molestie erat et libero sodales elementum."
+                            android:text="@{reviewTwo.description}"
                             android:textSize="10sp"
                             app:layout_constraintStart_toStartOf="@id/review_title_2"
-                            app:layout_constraintTop_toBottomOf="@id/review_title_2" />
+                            app:layout_constraintTop_toBottomOf="@id/review_title_2"
+                            tools:ignore="SmallSp" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </com.google.android.material.card.MaterialCardView>
 
@@ -673,11 +698,12 @@
                     android:layout_marginTop="20dp"
                     android:textColor="@color/primary_pink"
                     android:background="@drawable/pill_button_outline"
-                    android:text="More reviews"
+                    android:text="@string/more_reviews"
                     android:textSize="10sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/review_card_2" />
+                    app:layout_constraintTop_toBottomOf="@id/review_card_2"
+                    tools:ignore="SmallSp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
