--- a/app/src/main/res/layout/fragment_artist_profile.xml
+++ b/app/src/main/res/layout/fragment_artist_profile.xml
@@ -547,7 +547,7 @@
                             android:id="@+id/reviewer_profile_img"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
-                            android:src="@drawable/ic_baseline_account_circle_24"
+                            android:imageURL="@{artistReview1.reviewerImg}"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:shapeAppearanceOverlay="@style/circleImageView"/>
@@ -559,6 +559,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
+                            android:text="@{artistReview1.reviewerStageName}"
                             android:textSize="15sp"
                             app:layout_constraintStart_toEndOf="@id/reviewer_profile_img"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -636,7 +637,7 @@
                             android:id="@+id/reviewer_profile_img_2"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
-                            android:src="@drawable/ic_baseline_account_circle_24"
+                            android:imageURL="@{artistReview2.reviewerImg}"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:shapeAppearanceOverlay="@style/circleImageView"/>
@@ -647,6 +648,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
+                            android:text="@{artistReview2.reviewerStageName}"
                             android:textSize="15sp"
                             app:layout_constraintStart_toEndOf="@id/reviewer_profile_img_2"
                             app:layout_constraintTop_toTopOf="parent" />
