--- a/app/src/main/res/layout/review_card.xml
+++ b/app/src/main/res/layout/review_card.xml
@@ -28,7 +28,9 @@
                     android:id="@+id/reviewer_profile_img_2"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
                     android:imageURL="@{reviewModel.reviewerImg}"
+                    app:shapeAppearanceOverlay="@style/circleImageView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
